Icons: use full Tabler slug list; fix header phone icon alignment (#301)

--- a/assets/css/design-system.css
+++ b/assets/css/design-system.css
@@ -2339,6 +2339,9 @@ button:focus-visible,
 
 .site-header__phone-icon {
 	font-size: 0.95rem;
+	vertical-align: middle;
+	position: relative;
+	top: 1px;
 }
 
 .site-header__cta {
